--- a/_includes/head/index.html
+++ b/_includes/head/index.html
@@ -3,13 +3,13 @@
 {% assign font         = site.font         %}
 
 {% include        head/meta.html %}
-{% include_cached head/meta-static.html %}
+{% include head/meta-static.html %}
 
 {% include        head/links.html lang=page.lang %}
-{% include_cached head/links-static.html %}
+{% include head/links-static.html %}
 
-{% include_cached head/scripts.html %}
+{% include head/scripts.html %}
 
-{% include_cached head/styles.html layout=page.layout color=color theme_color=theme_color %}
+{% include head/styles.html layout=page.layout color=color theme_color=theme_color %}
 
 {% include my-head.html %}
